manifests/base/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
