manifests/base/app/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-hello
spec:
  gateways:
    - dev-ingress
  hosts:
    - hello.dev.k8s.local
  http:
    - route:
        - destination:
            host: hello
            port:
              number: 80
